# UnleashedRecomp

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: validate.yml
UnleashedRecomp/: CMakeLists.txt  main.cpp  sdl_dynamic_api.cpp  sdl_dynamic_api.h
UnleashedRecomp/gpu/: video.cpp
UnleashedRecomp/hid/: hid.h
UnleashedRecomp/hid/driver/: sdl_hid.cpp
UnleashedRecomp/locale/: config_locale.cpp
UnleashedRecomp/patches/: object_patches.cpp  resident_patches.cpp
UnleashedRecomp/ui/: button_guide.cpp  options_menu_thumbnails.cpp
UnleashedRecomp/user/: config.cpp  config.h  config_def.h
